# AICAproject

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Base/: Settings.cpp  Settings.h
Base/Implementations/: AlgorithmImpl_0.cpp  AlgorithmImpl_0.h
Base/Interfaces/: Algorithm.cpp  Algorithm.h
Data/: CompressData.cpp  CompressData.h
Data/Implementations/: TableImpl_0.cpp  TableImpl_0.h
Data/Interfaces/: Table.cpp  Table.h
GoogleTests/: AlgorithmTests.cpp  CMakeLists.txt  TableTests.cpp  test_main.cpp
Utils/: Utils.cpp  Utils.h
